--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-    "name": "fortune-front-end",
-    "version": "0.0.0",
-    "description": "Fortune Front-end",
-    "config": {
-    },
-    "scripts": {
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Fortune-Transportation/fortune-front-end.git"
-    },
-    "keywords": [
-        "Fortune",
-        "Transportation",
-        "front-end"
-    ],
-    "author": "Fortune Transportation",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Fortune-Transportation/fortune-front-end/issues"
-    },
-    "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme"
+  "name": "fortune-front-end",
+  "version": "0.0.0",
+  "description": "Fortune Front-end",
+  "config": {},
+  "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fortune-Transportation/fortune-front-end.git"
+  },
+  "keywords": [
+    "Fortune",
+    "Transportation",
+    "front-end"
+  ],
+  "author": "Fortune Transportation",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Fortune-Transportation/fortune-front-end/issues"
+  },
+  "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
+  "devDependencies": {
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6"
+  }
 }
