--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
     "devDependencies": {
         "jade": "^1.11.0",
-        "jasmine-core": "^2.3.4",
-        "karma": "^0.13.9",
-        "karma-chrome-launcher": "^0.2.0",
+          "jasmine-core": "^2.3.4",
+          "karma": "^0.13.9",
+          "karma-chrome-launcher": "^0.2.0",
         "karma-firefox-launcher": "^0.1.6",
         "karma-jasmine": "^0.3.6",
+        "ng-templatecache-convert": "^1.0.0",
         "protractor": "^2.2.0"
     },
     "config": {},
@@ -32,6 +33,7 @@
         "unit_tests": "node node_modules/karma/bin/karma start",
         "e2e_tests": "node node_modules/protractor/bin/protractor",
         "tests": "npm run unit_tests && npm run e2e_tests",
-        "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html"
+        "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html",
+        "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html"
     }
 }
