--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
-    "name": "fortune-front-end",
-    "version": "0.0.0",
-    "description": "Fortune Front-end",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Fortune-Transportation/fortune-front-end.git"
-        },
-    "keywords": [
-        "Fortune",
-        "Transportation",
-        "front-end"
-    ],
-    "author": "Fortune Transportation",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/Fortune-Transportation/fortune-front-end/issues"
-    },
-    "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
-    "devDependencies": {
-        "eslint": "^1.7.1",
-        "jade": "^1.11.0",
-        "jasmine-core": "^2.3.4",
-        "karma": "^0.13.9",
-        "karma-chrome-launcher": "^0.2.0",
-        "karma-firefox-launcher": "^0.1.6",
-        "karma-jasmine": "^0.3.6",
-        "ng-templatecache-convert": "^1.0.0",
-        "protractor": "^2.2.0"
-    },
-    "config": {},
-    "scripts": {
-        "update_webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-        "unit_tests": "node node_modules/karma/bin/karma start",
-        "e2e_tests": "node node_modules/protractor/bin/protractor",
-        "test": "npm run unit_tests && npm run e2e_tests",
-        "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html",
-        "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html",
-        "lint_js": "node node_modules/eslint/bin/eslint.js app/*.js"
-    }
+  "name": "fortune-front-end",
+  "version": "0.0.0",
+  "description": "Fortune Front-end",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fortune-Transportation/fortune-front-end.git"
+  },
+  "keywords": [
+    "Fortune",
+    "Transportation",
+    "front-end"
+  ],
+  "author": "Fortune Transportation",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Fortune-Transportation/fortune-front-end/issues"
+  },
+  "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
+  "devDependencies": {
+    "concat-cli": "^1.0.1",
+    "eslint": "^1.7.1",
+    "fs-promise": "^0.3.1",
+    "globby": "^3.0.1",
+    "jade": "^1.11.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6",
+    "ng-templatecache-convert": "^1.0.0",
+    "protractor": "^2.2.0",
+    "q": "^1.4.1",
+    "uglify-js": "^2.5.0"
+  },
+  "config": {},
+  "scripts": {
+    "update_webdriver": "node node_modules/protractor/bin/webdriver-manager update",
+    "unit_tests": "node node_modules/karma/bin/karma start",
+    "e2e_tests": "node node_modules/protractor/bin/protractor",
+    "test": "npm run unit_tests && npm run e2e_tests",
+    "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html",
+    "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html",
+    "lint_js": "node node_modules/eslint/bin/eslint.js app/*.js",
+    "concat_js": "node node_modules/concat-cli/index.js -f app/*.js -o tmp/app.js",
+    "uglify_js": "node scripts/uglify.js tmp/app.min.js app/**/*.js !app/**/*.spec.js"
+  }
 }
