--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
   "devDependencies": {
+    "checksum": "^0.1.1",
     "concat-cli": "^1.0.1",
     "eslint": "^1.7.1",
     "fs-promise": "^0.3.1",
@@ -42,6 +43,7 @@
     "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html",
     "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html",
     "lint_js": "node node_modules/eslint/bin/eslint.js app/*.js",
-    "uglify_js": "node scripts/uglify.js tmp/app.min.js app/**/*.js !app/**/*.spec.js tmp/ngTemplates.js"
+    "uglify_js": "node scripts/uglify.js tmp/app.min.js app/**/*.js !app/**/*.spec.js tmp/ngTemplates.js",
+    "checksum_js": "node scripts/checksum.js tmp/app.min.js"
   }
 }
