--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
   "devDependencies": {
+    "autoprefixer": "^6.2.1",
     "checksum": "^0.1.1",
     "concat-cli": "^1.0.1",
     "eslint": "^1.7.1",
@@ -32,6 +33,7 @@
     "karma-jasmine": "^0.3.6",
     "ng-templatecache-convert": "^1.0.0",
     "node-sass": "^3.4.2",
+    "postcss-cli": "^2.3.2",
     "protractor": "^2.2.0",
     "q": "^1.4.1",
     "sass-lint": "^1.4.0",
@@ -50,6 +52,7 @@
     "checksum_js": "node scripts/checksum.js tmp/app.min.js",
     "inject_js": "node node_modules/front-end-dependency-inject/index.js js tmp/html/index.html tmp/html/index.html tmp *.min.js",
     "lint_sass": "node node_modules/sass-lint/bin/sass-lint.js app/*.scss",
-    "compile_sass": "node node_modules/node-sass/bin/node-sass app/ -o tmp/css"
+    "compile_sass": "node node_modules/node-sass/bin/node-sass app/ -o tmp/css",
+    "autoprefix": "node node_modules/postcss-cli/index.js --use autoprefixer tmp/css/*.css -d tmp/css"
   }
 }
