--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "globals": {
         "describe": true,
         "it": true,
-        "expect": true
+        "expect": true,
+        "angular": true
     },
     "ecmaFeatures": {
         arrowFunctions: true
@@ -193,7 +194,7 @@
         "valid-jsdoc": 2,
         "valid-typeof": 2,
         "vars-on-top": 2,
-        "wrap-iife": 2,
+        "wrap-iife": [2, "inside"],
         "wrap-regex": 2,
         "yoda": [2, "never"]
     }
