Adds ability to build dev environment

--- a/package.json
+++ b/package.json
@@ -59,19 +59,26 @@
     "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html",
     "lint_js": "node node_modules/eslint/bin/eslint.js app/*.js !app/lib/**/*",
     "uglify_js": "node scripts/uglify-js.js tmp/app.min.js app/**/*.js !app/lib/**/* !app/**/*.spec.js tmp/ngTemplates.js & node scripts/uglify-js.js tmp/lib.min.js app/lib/**/*.js",
+    "copy_js_dev": "node scripts/cpy-wrapper.js app/**/*.js !app/lib/**/* !app/**/*.spec.js tmp/js & node scripts/cpy-wrapper.js app/lib/**/*.js tmp/js/lib",
     "checksum_js": "node scripts/checksum.js tmp/app.min.js & node scripts/checksum.js tmp/lib.min.js",
-    "inject_js": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp lib.*.min.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp app.*.min.js",
+    "inject_js_prod": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp lib.*.min.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp app.*.min.js",
+    "inject_js_dev": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp js/lib/*.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp js/*.js",
     "lint_sass": "node node_modules/sass-lint/bin/sass-lint.js app/*.scss !app/lib/**/*",
     "compile_sass": "node node_modules/node-sass/bin/node-sass app/ -o tmp/css",
     "autoprefix": "node node_modules/postcss-cli/index.js --use autoprefixer tmp/css/*.css -d tmp/css",
     "uglify_css": "node scripts/uglify-css.js tmp/app.min.css tmp/css/*.css & node scripts/uglify-css.js tmp/lib.min.css app/lib/**/*.css",
+    "copy_css_dev": "node scripts/cpy-wrapper.js tmp/css/**/* tmp/css2 && node node_modules/rimraf/bin.js tmp/css && node scripts/cpy-wrapper.js tmp/css2/* tmp/css && node node_modules/rimraf/bin.js tmp/css2 && node scripts/cpy-wrapper.js app/lib/**/*.css tmp/css/lib",
     "checksum_css": "node scripts/checksum.js tmp/app.min.css & node scripts/checksum.js tmp/lib.min.css",
-    "inject_css": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp lib.*.min.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp app.*.min.css",
+    "inject_css_prod": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp lib.*.min.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp app.*.min.css",
+    "inject_css_dev": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp css/lib/*.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp css/*.css", 
     "prep_html_prod": "npm run compile_jade && npm run ng_templates",
-    "prep_js_prod": "npm run lint_js && npm run test && npm run uglify_js && npm run checksum_js && npm run inject_js",
-    "prep_css_prod": "npm run compile_sass && npm run autoprefix && npm run uglify_css && npm run checksum_css && npm run inject_css",
-    "copy_assets": "node node_modules/cpy/cli.js app/assets/images/* dist/assets/images",
-    "copy_prod": "node node_modules/cpy/cli.js tmp/html/index.html tmp/*.min.js tmp/*.min.css dist & npm run copy_assets",
-    "prod": "npm run clean & npm run bower && npm run prep_html_prod && npm run prep_js_prod && npm run prep_css_prod && npm run copy_prod && npm run clean_tmp"
+    "prep_js_prod": "npm run lint_js && npm run test && npm run uglify_js && npm run checksum_js && npm run inject_js_prod",
+    "prep_css_prod": "npm run compile_sass && npm run autoprefix && npm run uglify_css && npm run checksum_css && npm run inject_css_prod",
+    "copy_images_prod": "node scripts/cpy-wrapper app/assets/images/* dist/assets/images",
+    "copy_images_dev": "node scripts/cpy-wrapper app/assets/images/* dev/assets/images",
+    "copy_prod": "node node_modules/cpy/cli.js tmp/html/index.html tmp/*.min.js tmp/*.min.css dist & npm run copy_images_prod",
+    "copy_dev": "node scripts/cpy-wrapper.js tmp/html/index.html dev & node scripts/cpy-wrapper.js tmp/html/* !tmp/html/index.html dev/html & node scripts/cpy-wrapper.js tmp/css/* !tmp/css/lib dev/css & node scripts/cpy-wrapper.js tmp/css/lib/* dev/css/lib & node scripts/cpy-wrapper.js tmp/js/* !tmp/js/lib dev/js & node scripts/cpy-wrapper.js tmp/js/lib/* dev/js/lib & npm run copy_images_dev",
+    "prod": "npm run clean & npm run bower && npm run prep_html_prod && npm run prep_js_prod && npm run prep_css_prod && npm run copy_prod && npm run clean_tmp",
+    "build_dev": "npm run clean & npm run bower && npm run compile_jade && npm run compile_sass && npm run copy_css_dev && npm run copy_js_dev && npm run inject_js_dev && npm run inject_css_dev && npm run copy_dev && npm run clean_tmp"
   }
 }
