Updates prod task. Probably should have been done in another branch, but oh well...

--- a/package.json
+++ b/package.json
@@ -25,60 +25,67 @@
     "cpy": "^3.4.1",
     "eslint": "^1.7.1",
     "front-end-dependency-inject": "^1.0.5",
+    "fs-extra": "^0.26.3",
     "fs-promise": "^0.3.1",
     "globby": "^3.0.1",
+    "http-server": "^0.8.5",
     "jade": "^1.11.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
+    "minimatch": "^3.0.0",
+    "minimist": "^1.2.0",
     "ncp": "^2.0.0",
-    "ng-templatecache-convert": "^1.0.0",
+    "ng-templatecache-convert": "^1.0.3",
     "node-sass": "^3.4.2",
+    "nofs": "^0.10.11",
+    "onchange": "^2.0.0",
+    "parallelshell": "^2.0.0",
     "postcss-cli": "^2.3.2",
     "protractor": "^3.0.0",
     "q": "^1.4.1",
-    "rimraf": "^2.4.4",
     "sass-lint": "^1.4.0",
     "uglify-js": "^2.5.0",
     "uglifycss": "0.0.19"
   },
-  "config": {},
   "scripts": {
-    "clean_tmp": "node node_modules/rimraf/bin.js tmp",
-    "clean_prod": "node node_modules/rimraf/bin.js dist",
-    "clean_dev": "node node_modules/rimraf/bin.js dev",
-    "clean": "npm run clean_tmp & npm run clean_prod & npm run clean_dev",
+    "clean:tmp": "node scripts/rm.js tmp",
+    "clean:prod": "node scripts/empty.js dist",
+    "clean:dev": "node scripts/empty.js dev",
+    "clean": "node node_modules/parallelshell/index.js \"npm run clean:tmp\" \"npm run clean:dev\" \"npm run clean:prod\"",
     "bower": "node node_modules/bower-installer/bower-installer.js -r",
     "update_webdriver": "node node_modules/protractor/bin/webdriver-manager update",
+    "install_dependencies": "npm install && node node_modules/parallelshell/index.js \"npm run bower\" \"npm run update_webdriver\"",
     "unit_tests": "node node_modules/karma/bin/karma start",
     "e2e_tests": "node node_modules/protractor/bin/protractor",
     "test": "npm run unit_tests && npm run e2e_tests",
-    "compile_jade": "node node_modules/jade/bin/jade app index.jade --out tmp/html",
-    "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd tmp/ngTemplates.js tmp/html/*.html !tmp/html/index.html",
-    "lint_js": "node node_modules/eslint/bin/eslint.js app/*.js !app/lib/**/*",
-    "uglify_js": "node scripts/uglify-js.js tmp/app.min.js app/**/*.js !app/lib/**/* !app/**/*.spec.js tmp/ngTemplates.js & node scripts/uglify-js.js tmp/lib.min.js app/lib/**/*.js",
-    "copy_js_dev": "node scripts/cpy-wrapper.js app/**/*.js !app/lib/**/* !app/**/*.spec.js tmp/js & node scripts/cpy-wrapper.js app/lib/**/*.js tmp/js/lib",
-    "checksum_js": "node scripts/checksum.js tmp/app.min.js & node scripts/checksum.js tmp/lib.min.js",
-    "inject_js_prod": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp lib.*.min.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp app.*.min.js",
-    "inject_js_dev": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp js/lib/*.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp js/*.js",
-    "lint_sass": "node node_modules/sass-lint/bin/sass-lint.js app/*.scss !app/lib/**/*",
-    "compile_sass": "node node_modules/node-sass/bin/node-sass app/ -o tmp/css",
+    "cp": "node scripts/glob-cp.js",
+    "mv": "node scripts/glob-mv.js",
+    "compile:jade": "node node_modules/jade/bin/jade tmp/jade",
+    "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd **/*.html !index.html tmp/js/ngTemplates.js -c tmp/html",
+    "lint:js": "node node_modules/eslint/bin/eslint.js app/*.js !app/lib/**/*",
+    "uglify:js": "node node_modules/parallelshell/index.js \"node scripts/uglify.js js tmp/js/**/*.js !tmp/js/lib/**/* !tmp/js/**/*.spec.js tmp/js/ngTemplates.js tmp/js/min/app.min.js\" \"node scripts/uglify.js js tmp/js/lib/**/*.js tmp/js/min/lib.min.js\"",
+    "checksum:js": "node node_modules/parallelshell/index.js \"node scripts/checksum.js tmp/js/min/app.min.js\" \"node scripts/checksum.js tmp/js/min/lib.min.js\"",
+    "inject:js:prod": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp/js/min lib.*.min.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp/js/min app.*.min.js",
+    "inject:js:dev": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp js/lib/**/*.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp js/**/*.js !js/lib/**/*",
+    "lint:sass": "node node_modules/sass-lint/bin/sass-lint.js tmp/*.scss !app/lib/**/*",
+    "compile:sass": "node node_modules/node-sass/bin/node-sass tmp/sass -o tmp/css",
     "autoprefix": "node node_modules/postcss-cli/index.js --use autoprefixer tmp/css/*.css -d tmp/css",
-    "uglify_css": "node scripts/uglify-css.js tmp/app.min.css tmp/css/*.css & node scripts/uglify-css.js tmp/lib.min.css app/lib/**/*.css",
-    "copy_css_dev": "node scripts/cpy-wrapper.js tmp/css/**/* tmp/css2 && node node_modules/rimraf/bin.js tmp/css && node scripts/cpy-wrapper.js tmp/css2/* tmp/css && node node_modules/rimraf/bin.js tmp/css2 && node scripts/cpy-wrapper.js app/lib/**/*.css tmp/css/lib",
-    "checksum_css": "node scripts/checksum.js tmp/app.min.css & node scripts/checksum.js tmp/lib.min.css",
-    "inject_css_prod": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp lib.*.min.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp app.*.min.css",
-    "inject_css_dev": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp css/lib/*.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp css/*.css", 
-    "prep_html_prod": "npm run compile_jade && npm run ng_templates",
-    "prep_js_prod": "npm run lint_js && npm run test && npm run uglify_js && npm run checksum_js && npm run inject_js_prod",
-    "prep_css_prod": "npm run compile_sass && npm run autoprefix && npm run uglify_css && npm run checksum_css && npm run inject_css_prod",
-    "copy_images_prod": "node scripts/cpy-wrapper app/assets/images/* dist/assets/images",
-    "copy_images_dev": "node scripts/cpy-wrapper app/assets/images/* dev/assets/images",
-    "copy_prod": "node node_modules/cpy/cli.js tmp/html/index.html tmp/*.min.js tmp/*.min.css dist & npm run copy_images_prod",
-    "copy_dev": "node scripts/cpy-wrapper.js tmp/html/index.html dev & node scripts/cpy-wrapper.js tmp/html/* !tmp/html/index.html dev/html & node scripts/cpy-wrapper.js tmp/css/* !tmp/css/lib dev/css & node scripts/cpy-wrapper.js tmp/css/lib/* dev/css/lib & node scripts/cpy-wrapper.js tmp/js/* !tmp/js/lib dev/js & node scripts/cpy-wrapper.js tmp/js/lib/* dev/js/lib & npm run copy_images_dev",
-    "prod": "npm run clean & npm run bower && npm run prep_html_prod && npm run prep_js_prod && npm run prep_css_prod && npm run copy_prod && npm run clean_tmp",
-    "build_dev": "npm run clean & npm run bower && npm run compile_jade && npm run compile_sass && npm run copy_css_dev && npm run copy_js_dev && npm run inject_js_dev && npm run inject_css_dev && npm run copy_dev && npm run clean_tmp"
+    "uglify:css": "node node_modules/parallelshell/index.js \"node scripts/uglify.js css tmp/css/*.css !tmp/css/lib/**/* tmp/css/min/app.min.css\" \"node scripts/uglify.js css tmp/css/lib/**/*.css tmp/css/min/lib.min.css\"",
+    "checksum:css": "node node_modules/parallelshell/index.js \"node scripts/checksum.js tmp/css/min/app.min.css\" \"node scripts/checksum.js tmp/css/min/lib.min.css\"",
+    "inject:css:prod": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp/css/min lib.*.min.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp/css/min app.*.min.css",
+    "inject:css:dev": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp css/lib/**/*.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp css/**/*.css !css/lib/**/*",
+    "prep:html:prod": "npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html -o && npm run ng_templates",
+    "prep:js:prod": "npm run lint:js && npm run test && npm run cp app/**/*.js tmp/js -e app/**/*.spec.js && npm run uglify:js && npm run checksum:js && npm run inject:js:prod",
+    "prep:css:prod": "npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run uglify:css && npm run checksum:css && npm run inject:css:prod",
+    "copy:prod": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dist/index.html\" \"npm run cp -- tmp/js/min/*.min.js dist\" \"npm run cp -- tmp/css/min/*.min.css dist\" \"npm run cp -- app/assets/images/* dist/assets/images\"",
+    "copy:dev": "node node_modules/parallelshell/index.jsnode \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp tmp/html/**/*.html dev/html -e tmp/html/index.html\" \"npm run cp tmp/css/**/*.css dev/css\" \"npm run cp tmp/js/**/*.js dev/js\" \"npm run cp app/assets/**/* dev/assets\"",
+    "prod": "npm run clean && npm run prep:html:prod && npm run prep:js:prod && npm run prep:css:prod && npm run copy:prod && npm run clean:tmp",
+    "build_dev": "npm run clean && npm run compile:jade && npm run compile:sass && npm run copy:css:dev && npm run copy:js:dev && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev && npm run clean:tmp",
+    "watch": "node node_modules/onchange/cli.js app !app/lib index.jade -- npm run build_dev",
+    "serve": "http-server dev -p 8080",
+    "dev": "node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\""
   }
 }
