--- a/package.json
+++ b/package.json
@@ -81,9 +81,9 @@
     "prep:js:prod": "npm run lint:js && npm run test && npm run cp app/**/*.js tmp/js -e app/**/*.spec.js && npm run uglify:js && npm run checksum:js && npm run inject:js:prod",
     "prep:css:prod": "npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run uglify:css && npm run checksum:css && npm run inject:css:prod",
     "copy:prod": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dist/index.html\" \"npm run cp -- tmp/js/min/*.min.js dist\" \"npm run cp -- tmp/css/min/*.min.css dist\" \"npm run cp -- app/assets/images/* dist/assets/images\"",
-    "copy:dev": "node node_modules/parallelshell/index.jsnode \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp tmp/html/**/*.html dev/html -e tmp/html/index.html\" \"npm run cp tmp/css/**/*.css dev/css\" \"npm run cp tmp/js/**/*.js dev/js\" \"npm run cp app/assets/**/* dev/assets\"",
+    "copy:dev": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp tmp/html/**/*.html dev/html -e tmp/html/index.html\" \"npm run cp tmp/css/**/*.css dev/css\" \"npm run cp tmp/js/**/*.js dev/js\" \"npm run cp app/assets/images/**/* dev/assets/images\"",
     "prod": "npm run clean && npm run prep:html:prod && npm run prep:js:prod && npm run prep:css:prod && npm run copy:prod && npm run clean:tmp",
-    "build_dev": "npm run clean && npm run compile:jade && npm run compile:sass && npm run copy:css:dev && npm run copy:js:dev && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev && npm run clean:tmp",
+    "build:dev": "npm run clean && npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html -o && npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run cp -- app/**/*.js tmp/js -e app/**/*.spec.js && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev",
     "watch": "node node_modules/onchange/cli.js app !app/lib index.jade -- npm run build_dev",
     "serve": "http-server dev -p 8080",
     "dev": "node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\""
