--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "copy:dev": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp -- tmp/html/**/*.html dev/html -e tmp/html/index.html -e tmp/html/index-no-dependencies.html\" \"npm run cp -- tmp/css/**/*.css dev/css\" \"npm run cp -- tmp/js/**/*.js dev/js\" \"npm run cp -- app/assets/images/**/* dev/assets/images\"",
     "prod": "npm run clean && npm run prep:html:prod && npm run prep:js:prod && npm run prep:css:prod && npm run copy:prod && npm run clean:tmp",
     "build:dev": "npm run clean && npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html && npm run cp -- tmp/html/index.html tmp/html/index-no-dependencies.html && npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run cp -- app/**/*.js tmp/js -e app/**/*.spec.js && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev",
-    "watch": "node node_modules/onchange/cli.js app !app/lib index.jade -- npm run build_dev",
+    "watch": "node scripts/watch.js app",
     "serve": "http-server dev -p 8080",
-    "dev": "node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\""
+    "dev": "npm run build:dev && node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\""
   }
 }
