--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
+    "live-reload": "^1.1.0",
     "minimatch": "^3.0.0",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
@@ -85,9 +86,10 @@
     "copy:prod": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dist/index.html\" \"npm run cp -- tmp/js/min/*.min.js dist\" \"npm run cp -- tmp/css/min/*.min.css dist\" \"npm run cp -- app/assets/images/* dist/assets/images\"",
     "copy:dev": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp -- tmp/html/**/*.html dev/html -e tmp/html/index.html -e tmp/html/index-no-dependencies.html\" \"npm run cp -- tmp/css/**/*.css dev/css\" \"npm run cp -- tmp/js/**/*.js dev/js\" \"npm run cp -- app/assets/images/**/* dev/assets/images\"",
     "prod": "npm run clean && npm run prep:html:prod && npm run prep:js:prod && npm run prep:css:prod && npm run copy:prod && npm run clean:tmp",
-    "build:dev": "npm run clean && npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html && npm run cp -- tmp/html/index.html tmp/html/index-no-dependencies.html && npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run cp -- app/**/*.js tmp/js -e app/**/*.spec.js && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev",
+    "build:dev": "npm run clean && npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html && node scripts/inject-live-reload-script.js tmp/html/index.html 9090 && npm run cp -- tmp/html/index.html tmp/html/index-no-dependencies.html && npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run cp -- app/**/*.js tmp/js -e app/**/*.spec.js && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev",
     "watch": "node scripts/watch.js app",
     "serve": "http-server dev -p 8080",
-    "dev": "npm run build:dev && node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\""
+    "livereload": "node node_modules/live-reload/bin/reload.js dev --port=9090",
+    "dev": "npm run build:dev && node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\" \"npm run livereload\""
   }
 }
