--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "fortune-front-end",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Fortune Front-end",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Fortune-Transportation/fortune-front-end.git"
+    "url": "https://github.com/Fortune-Transportation/fortune-front-end.git"
   },
   "keywords": [
     "Fortune",
@@ -13,85 +17,24 @@
   ],
   "author": "Fortune Transportation",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Fortune-Transportation/fortune-front-end/issues"
-  },
-  "homepage": "https://github.com/Fortune-Transportation/fortune-front-end#readme",
   "devDependencies": {
-    "autoprefixer": "^6.2.1",
-    "bower-installer": "^1.2.0",
-    "checksum": "^0.1.1",
-    "concat-cli": "^1.0.1",
-    "cpy": "^3.4.1",
-    "eslint": "^1.7.1",
-    "front-end-dependency-inject": "^1.0.5",
-    "fs-extra": "^0.26.3",
-    "fs-promise": "^0.3.1",
-    "globby": "^3.0.1",
-    "http-server": "^0.8.5",
-    "jade": "^1.11.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.9",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.6",
-    "live-reload": "^1.1.0",
-    "minimatch": "^3.0.0",
-    "minimist": "^1.2.0",
-    "ncp": "^2.0.0",
-    "ng-templatecache-convert": "^1.0.3",
-    "node-sass": "^3.4.2",
-    "nofs": "^0.10.11",
-    "onchange": "^2.0.0",
-    "opener": "^1.4.1",
-    "parallelshell": "^2.0.0",
-    "postcss-cli": "^2.3.2",
-    "protractor": "^3.0.0",
-    "q": "^1.4.1",
-    "sass-lint": "^1.4.0",
-    "uglify-js": "^2.5.0",
-    "uglifycss": "0.0.19",
-    "watch": "^0.17.1"
-  },
-  "scripts": {
-    "clean:tmp": "node scripts/rm.js tmp",
-    "clean:prod": "node scripts/empty.js dist",
-    "clean:dev": "node scripts/empty.js dev",
-    "clean": "node node_modules/parallelshell/index.js \"npm run clean:tmp\" \"npm run clean:dev\" \"npm run clean:prod\"",
-    "bower": "node node_modules/bower-installer/bower-installer.js -r",
-    "update_webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-    "install_dependencies": "npm install && node node_modules/parallelshell/index.js \"npm run bower\" \"npm run update_webdriver\"",
-    "unit_tests": "node node_modules/karma/bin/karma start",
-    "e2e_tests": "node node_modules/protractor/bin/protractor",
-    "test": "npm run unit_tests && npm run e2e_tests",
-    "cp": "node scripts/glob-cp.js",
-    "mv": "node scripts/glob-mv.js",
-    "rm": "node scripts/rm.js",
-    "compile:jade": "node node_modules/jade/bin/jade tmp/jade",
-    "ng_templates": "node node_modules/ng-templatecache-convert/index.js fortuneFrontEnd **/*.html !index.html tmp/js/ngTemplates.js -c tmp/html",
-    "lint:js": "node node_modules/eslint/bin/eslint.js app/*.js !app/lib/**/*",
-    "uglify:js": "node node_modules/parallelshell/index.js \"node scripts/uglify.js js tmp/js/**/*.js !tmp/js/lib/**/* !tmp/js/**/*.spec.js tmp/js/ngTemplates.js tmp/js/min/app.min.js\" \"node scripts/uglify.js js tmp/js/lib/**/*.js tmp/js/min/lib.min.js\"",
-    "checksum:js": "node node_modules/parallelshell/index.js \"node scripts/checksum.js tmp/js/min/app.min.js\" \"node scripts/checksum.js tmp/js/min/lib.min.js\"",
-    "inject:js:prod": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp/js/min lib.*.min.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp/js/min app.*.min.js",
-    "inject:js:dev": "node node_modules/front-end-dependency-inject/index.js lib js tmp/html/index.html tmp/html/index.html tmp js/lib/**/*.js && node node_modules/front-end-dependency-inject/index.js app js tmp/html/index.html tmp/html/index.html tmp js/**/*.js !js/lib/**/*",
-    "lint:sass": "node node_modules/sass-lint/bin/sass-lint.js tmp/*.scss !app/lib/**/*",
-    "compile:sass": "node node_modules/node-sass/bin/node-sass tmp/sass -o tmp/css",
-    "autoprefix": "node node_modules/postcss-cli/index.js --use autoprefixer tmp/css/*.css -d tmp/css",
-    "uglify:css": "node node_modules/parallelshell/index.js \"node scripts/uglify.js css tmp/css/*.css !tmp/css/lib/**/* tmp/css/min/app.min.css\" \"node scripts/uglify.js css tmp/css/lib/**/*.css tmp/css/min/lib.min.css\"",
-    "checksum:css": "node node_modules/parallelshell/index.js \"node scripts/checksum.js tmp/css/min/app.min.css\" \"node scripts/checksum.js tmp/css/min/lib.min.css\"",
-    "inject:css:prod": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp/css/min lib.*.min.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp/css/min app.*.min.css",
-    "inject:css:dev": "node node_modules/front-end-dependency-inject/index.js lib css tmp/html/index.html tmp/html/index.html tmp css/lib/**/*.css && node node_modules/front-end-dependency-inject/index.js app css tmp/html/index.html tmp/html/index.html tmp css/**/*.css !css/lib/**/*",
-    "prep:html:prod": "npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html -o && npm run ng_templates",
-    "prep:js:prod": "npm run lint:js && npm run test && npm run cp app/**/*.js tmp/js -e app/**/*.spec.js && npm run uglify:js && npm run checksum:js && npm run inject:js:prod",
-    "prep:css:prod": "npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run uglify:css && npm run checksum:css && npm run inject:css:prod",
-    "copy:prod": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dist/index.html\" \"npm run cp -- tmp/js/min/*.min.js dist\" \"npm run cp -- tmp/css/min/*.min.css dist\" \"npm run cp -- app/assets/images/* dist/assets/images\"",
-    "copy:dev": "node node_modules/parallelshell/index.js \"npm run cp -- tmp/html/index.html dev/index.html\" \"npm run cp -- tmp/html/**/*.html dev/html -e tmp/html/index.html -e tmp/html/index-no-dependencies.html\" \"npm run cp -- tmp/css/**/*.css dev/css\" \"npm run cp -- tmp/js/**/*.js dev/js\" \"npm run cp -- app/assets/images/**/* dev/assets/images\"",
-    "prod": "npm run clean && npm run prep:html:prod && npm run prep:js:prod && npm run prep:css:prod && npm run copy:prod && npm run clean:tmp",
-    "build:dev": "npm run clean && npm run cp -- app/**/*.jade tmp/jade && npm run compile:jade && npm run mv -- tmp/jade/**/*.html tmp/html && node scripts/inject-live-reload-script.js tmp/html/index.html 9090 && npm run cp -- tmp/html/index.html tmp/html/index-no-dependencies.html && npm run cp -- app/**/*.scss tmp/sass && npm run compile:sass && npm run autoprefix && npm run cp -- app/**/*.js tmp/js -e app/**/*.spec.js && npm run inject:js:dev && npm run inject:css:dev && npm run copy:dev",
-    "watch": "node scripts/watch.js app",
-    "serve": "http-server dev -p 8080",
-    "livereload": "node node_modules/live-reload/bin/reload.js dev --port=9090",
-    "dev": "npm run build:dev && node node_modules/parallelshell/index.js \"npm run serve\" \"npm run watch\" \"npm run livereload\" \"node node_modules/opener/opener.js http://localhost:8080\"",
-    "start": "npm run dev"
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-inject": "^3.0.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rev": "^6.0.1",
+    "gulp-sass": "^2.1.1",
+    "gulp-simple-inject": "0.0.3",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "open": "0.0.5"
   }
 }
