--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma": "^0.13.16",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "protractor": "^3.0.0"
   }
 }
