--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fortune Front-end",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test:unit --silent && gulp test:e2e --silent"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "gulp-inject": "^3.0.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-print": "^2.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-simple-inject": "0.0.3",
@@ -36,9 +36,11 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "jasmine-core": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.16",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
+    "karma-spec-reporter": "0.0.23",
     "open": "0.0.5",
     "protractor": "^3.0.0"
   }
