--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ node_js:
     - "stable"
     - "4"
 before_install:
-    - export CHROME_BIN=chromium-browser
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+    - "export CHROME_BIN=chromium-browser"
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+    - "sleep 3" # give xvfb some time to start
 before_script: 
     - npm install -g gulp
