--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Fortune Transportation",
   "license": "MIT",
   "devDependencies": {
+    "babel-polyfill": "^6.3.14",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -39,9 +40,17 @@
     "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.16",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-es6-shim": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.2",
+    "karma-phantomjs2-launcher": "^0.4.0",
+    "karma-slimerjs-launcher": "^0.2.0",
     "karma-spec-reporter": "0.0.23",
     "open": "0.0.5",
-    "protractor": "^3.0.0"
+    "phantomjs": "^1.9.19",
+    "phantomjs2": "^2.0.2",
+    "protractor": "^3.0.0",
+    "slimerjs": "^0.9.6-2"
   }
 }
