--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Fortune Transportation",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.7.2",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
