--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.16",
+    "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-spec-reporter": "0.0.23",
